<resources>
    <string name="appName">Dress me up!</string>
    <string name="buttonWardrobe">wardrobe</string>
    <string name="buttonDressMeUp">dress me up</string>
    <string name="buttonAddNewClothes">add new clothes</string>
    <string name="buttonTakePhoto">Take photo</string>
    <string name="buttonChangeTemplate">ChangeTemplate</string>
    <string name="buttonToggleLight">ToggleLight</string>
    <string name="title_activity_stylization">StylizationActivity</string>
    <string name="title_activity_wardrobe">WardrobeActivity</string>
    <string name="action_edit_cloth">Edit</string>
    <string name="action_delete_cloth">Delete</string>
    <string name="testString1">StylizationActivity here.</string>
    <string name="testString2">WardrobeActivity here.</string>
    <string name="testString3">StylizationActivity here.</string>
    <string name="testString4">List of clothes:</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="select_tags_activity">SelectTagsActivity</string>
    <string name="assign_tags">Assign tags</string>
    <string name="cloth_name">Cloth name</string>
    <string name="assigned_tags">Assigned tags:</string>
    <string name="temp_tag_list">none</string>
    <string name="dialog_tag_title">Let\'s assign tags:</string>
    <string name="Next_btn">Next</string>
    <string name="Prev_btn">Prev</string>
    <string name="ClearAll_btn">Clear all</string>
    <string name="empty_cloth_list_text">Press a button to add new clothes…</string>
    <string name="button_add_cloth">+</string>
    <string name="save_cloth">save cloth</string>
    <string name="btn_cancel">cancel</string>
    <string name="add_cloth_name">Cloth name...</string>
    <string name="flash_off">flash off</string>
    <string name="flash_on">flash on</string>
    <string name="add_meeting_name">Meeting name...</string>
    <string name="title_activity_meeting">Meeting</string>
    <string name="save_meeting">save meeting</string>
    <string name="choose_your_destination">Choose your destination:</string>
    <string name="your_destination">Your destination: </string>
    <string name="no_information">No information!</string>
</resources>
