<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundMain"
    android:onClick="onClickRelativeLayoutMeeting"
    android:padding="40dp"
    tools:context="com.amazingteam.competenceproject.activity.MeetingActivity"
    tools:showIn="@layout/activity_meeting">


    <LinearLayout
        android:id="@+id/linearCancelSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@color/buttonsBackground"
            android:foreground="?attr/selectableItemBackground"
            android:onClick="onClickCancel"
            android:padding="10dp"
            android:text="@string/btn_cancel"
            android:textColor="@color/WHITE" />

        <Button
            android:id="@+id/btnSaveMeeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@color/buttonsBackground"
            android:foreground="?attr/selectableItemBackground"
            android:onClick="onClickSaveMeeting"
            android:padding="10dp"
            android:text="@string/save_meeting"
            android:textColor="@color/WHITE" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearCancelSave"
        android:gravity="bottom"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvMeetingName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="Meeting name"
            android:textSize="@dimen/mainButtonsTextSize" />

        <TextView
            android:id="@+id/tvAssignedTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/assigned_tags" />

        <TextView
            android:id="@+id/tvTagList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical|center_horizontal"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/temp_tag_list" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/meetingNameWrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center_vertical|center_horizontal"
            android:textColorHint="@color/buttonsBackground"
            app:hintTextAppearance="@style/TextAppearence.TextInputLayout.Blue">

            <com.amazingteam.competenceproject.ui.EditTextNewEvents
                android:id="@+id/inputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/add_meeting_name"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnAssignTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginBetweenLinearTags"
            android:background="@color/buttonsBackground"
            android:foreground="?attr/selectableItemBackground"
            android:padding="5dp"
            android:text="@string/assign_tags"
            android:textColor="@color/WHITE" />
    </LinearLayout>


</RelativeLayout>
