<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.amazingteam.competenceproject.activity.PhotoActivity"
    tools:showIn="@layout/activity_photo">

    <TextureView
        android:id="@+id/textureView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="140dp" />

    <ImageView
        android:id="@+id/templateView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="140dp"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/clothtemp_tshirt_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/changeClothTemplate"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@drawable/roundshape1"
            android:contentDescription="@string/buttonChangeTemplate"
            android:foreground="?attr/selectableItemBackground"
            android:src="@mipmap/btn_coat3" />

        <ImageButton
            android:id="@+id/takePhoto"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@drawable/roundshape1"
            android:contentDescription="@string/buttonTakePhoto"
            android:foreground="?attr/selectableItemBackground"
            android:src="@mipmap/btn_camera3" />

        <ImageButton
            android:id="@+id/toggleLight"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@drawable/roundshape1"
            android:contentDescription="@string/buttonToggleLight"
            android:foreground="?attr/selectableItemBackground"
            android:src="@mipmap/btn_flash" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/templateRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:background="@color/colorPrimaryDark"
        android:scrollbars="horizontal" />

</RelativeLayout>